Opened 15 years ago
Closed 15 years ago
#5918 closed bug (fixed)
mail preflet localization regression fix
Reported by: | yourpalal | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/alpha2 |
Component: | Preferences/Mail | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After hrev36251, sending mail with a locale other than english failed, because add-on paths were being localized. PulkoMandy pointed this out on irc.
Attachments (1)
Change History (3)
by , 15 years ago
Attachment: | mail.patch added |
---|
comment:1 by , 15 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:2 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Applied in hrev36648, thanks!
Note:
See TracTickets
for help on using tickets.
remove translation of add-on file paths