* Applied patch by yourpalal that fixes #5918, ie. removed the accidental   localizing of add-on paths.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36648 a95241bf-73f2-0310-859d-f6bbb57e9c96